added the gyroo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>game maybe</title>
 </head>
 
 <body>
@@ -21,6 +21,7 @@
   <a href="simple app.html">simple app.html</a>
   <a href="transpose2.html">transpose2.html</a>
   <a href="typing.html">typing.html</a>
+  <a href="gyrooo.html">gyrooo.html</a>
   <a href="typingspeed.html">typingspeed.html</a>
 </body>
 
