--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>game maybe</title>
 </head>
+<style>
+  body {
+    background: #eaeaea;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+  }
+
+  a,
+  a:link {
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    width: 140px;
+    line-height: 40px;
+    height: 40px;
+    box-shadow: 2px 2px 3px gray;
+    margin: 5px 2px;
+  }
+
+  a:hover {
+    background: #eee;
+    box-shadow: 5px 5px 3px gray;
+
+  }
+</style>
 
 <body>
   <a href="alltransform.html">alltransform</a>
@@ -17,6 +47,7 @@
   <a href="keyboard.html">keyboard</a>
   <a href="mirrorword.html">mirrorword</a>
   <a href="stopwatch.html">stopwatch</a>
+  <a href="guessnumber.html">guessnumber</a>
   <a href="spr.html">spr</a>
   <a href="simple app.html">simple app.html</a>
   <a href="transpose2.html">transpose2.html</a>
