--- a/generatecolor.html
+++ b/generatecolor.html
@@ -7,6 +7,8 @@
   <title>Document</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 </head>
 <style>
@@ -32,13 +34,16 @@
       <h5 class="card-title">Number generator</h5>
 
       <div class="card-body">
-        <p class="card-text" id="colorhex">#000000</p>
-        <button class="btn btn-large btn-outline-success" id="generatecolor">Generate color</button>
+        <p class="card-text" id="content">#000000</p>
+        <button class="btn btn-large btn-outline-success" id="generatecolor"><i class="fa fa-copy"></i>
+          Generate
+          color</button>
       </div>
     </div>
 
   </div>
 
+  <script src="copy.js"></script>
   <script>
     var hexnum = ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "a", "b", "c", "d", "e", "f"];
     document.querySelector("#generatecolor").addEventListener("click", generatecolor)
@@ -61,9 +66,9 @@
       console.log(myhex.join())
 
       // return newColor;
-      document.querySelector("#colorhex").innerText = newColor;
+      document.querySelector("#content").innerText = newColor;
       document.querySelector(".genCol").style = "background:" + newColor + ";";
-
+      copy();
     }
   </script>
 
