added apis try to the links

--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    width: 140px;
+    width: 150px;
     line-height: 40px;
     height: 40px;
     box-shadow: 2px 2px 3px gray;
     margin: 5px 2px;
+    border-radius: 8px;
+    padding: 2px;
+
   }
 
   a:hover {
@@ -42,18 +45,22 @@
   <a href="clipather.html">clipather</a>
   <a href="colorandinverse.html">colorandinverse</a>
   <a href="commentlist.html">commentlist</a>
+  <a href="covidtracker.html">covidtracker</a>
   <a href="dynamicgradient.html">dynamicgradient</a>
+  <a href="guessnumber.html">guessnumber</a>
+  <a href="gyrooo.html">gyrooo.html</a>
+  <a href="moviesearch.html">moviesearch</a>
+  <a href="weatherapi.html">weather</a>
   <a href="headntail.html">headntail</a>
   <a href="keyboard.html">keyboard</a>
   <a href="mirrorword.html">mirrorword</a>
   <a href="stopwatch.html">stopwatch</a>
-  <a href="guessnumber.html">guessnumber</a>
   <a href="spr.html">spr</a>
-  <a href="simple app.html">simple app.html</a>
-  <a href="transpose2.html">transpose2.html</a>
-  <a href="typing.html">typing.html</a>
-  <a href="gyrooo.html">gyrooo.html</a>
-  <a href="typingspeed.html">typingspeed.html</a>
+  <a href="simple app.html">simple app</a>
+  <a href="crud.html">crud</a>
+  <a href="transpose2.html">transpose2</a>
+  <a href="typing.html">typing</a>
+  <a href="typingspeed.html">typingspeed</a>
 </body>
 
 </html>
