--- a/transpose2.html
+++ b/transpose2.html
@@ -1,29 +1,128 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset=" UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>change scale</title>
+  <link rel="shortcut icon" href="https://www.transparentpng.com/thumb/musical-notes/music-notes-png-pictures-3.png"
+    type="image/x-icon">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="../resources/perfect.css">
   <link rel="stylesheet" href="transposenote.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 
+<style>
+  .toggle {
+    position: absolute;
+    top: 2.5rem;
+    left: 2.5rem;
+    cursor: pointer;
+    transition: left .5s ease, font 1s ease;
+  }
+
+  .toggle i {
+    width: 3.5rem;
+    z-index: 2;
+    color: #a82acb;
+  }
+
+  .menu {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 20vw;
+    height: 100vh;
+    /* background-color: #8f928f80; */
+    transform: translateX(-101%);
+    will-change: transform;
+    transform: all .2s ease-in;
+    color: black
+  }
+
+  .menu.open {
+    transform: translateX(0%);
+  }
+
+  .menu.open+.toggle {
+    left: 8rem;
+    font-size: 2rem;
+  }
+
+  .menu-v {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 10vh;
+    /* background-color: #8f928f80; */
+    transform: translateX(-101%);
+    will-change: transform;
+    transform: all .2s ease-in;
+  }
+
+  .menu-v.open {
+    transform: translateX(0%);
+  }
+
+  .home {
+    min-height: 100vh;
+    width: 100%;
+    padding: 8rem;
+
+  }
+
+
+  .select ul {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+    margin-top: 80px;
+    padding: 2px 0;
+  }
+
+  .select ul li {
+    width: 100%;
+    height: 40px;
+    font-size: 1.5rem;
+    text-transform: capitalize;
+    margin: 5px 5px;
+    cursor: pointer;
+  }
+
+  .select ul li:hover {
+    box-shadow: 1px 1px 5px gray;
+    background: rgba(255, 0, 0, 0.11);
+  }
+
+  .select ul::-webkit-scrollbar {
+    background: transparent;
+  }
+</style>
+
 <body>
 
+  <div id="menu" class="menu">
+    <div class="select">
+      <ul id="songstwo">
+      </ul>
+    </div>
+  </div>
+  <div class="toggle" id="toggle">
+    <i class="fa fa-folder-open"></i>
+  </div>
   <div class="containerd">
     <div class="title">
       <h1 id="titlename">Transpose</h1>
     </div>
     <div class="addSect">
-      <select name="" id="songs">
-      </select>
+      <select name="" id="songs"></select>
       <select name="" id="songkey">
         <option selected value="C">C</option>
         <option value="Cs">C#</option>
@@ -38,17 +137,80 @@
         <option value="As">A#</option>
         <option value="B">B</option>
       </select>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        <i class="fa fa-camera"></i>
+      </button>
       <button id="translate" class="add">translate</button>
+      <button id="staff" class="add">staff</button>
     </div>
-    <div class="list"></div>
+    <div class="list" id="capture"></div>
   </div>
+  <div class="modal fade bd-example-modal-lg" id="exampleModal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Capture</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+  </script>
 
   <script type="text/javascript" src="notes.json">
   </script>
   <script type="text/javascript" src="varnotes.js">
   </script>
-
   <script>
+    var btn = document.getElementById("toggle");
+    var menu = document.getElementById("menu");
+    btn.addEventListener("click", toggleMenu)
+    menu.addEventListener("click", toggleMenu)
+
+    function toggleMenu() {
+      if (menu.classList.contains('open')) {
+        menu.classList.remove('open')
+      } else {
+        menu.classList.add('open')
+
+      }
+    }
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="../../htmltocanvas.min.js"></script>
+  <script>
+    document.addEventListener("keyup", (e) => {
+      if (e.keyCode == 67) {
+        console.log(e.key, songs.value)
+        html2canvas(document.querySelector("#capture")).then(canvas => {
+          document.body.appendChild(canvas)
+          // $('.modal-body').append(canvas)
+          // $('#exampleModal').modal()
+        });
+      }
+    })
+    document.querySelector(".btn-primary").addEventListener("click", () => {
+      html2canvas(document.querySelector("#capture")).then(canvas => {
+        $('.modal-body').append(canvas)
+      });
+    })
     // console.log(mydata[0].age);
     // console.log(mydata[1].name);
     // console.log(mydata[1].age);
@@ -86,7 +248,55 @@
       };
       fileread.readAsText(file_to_read);
     }); */
+
+    document.querySelector("#staff").addEventListener("click", (e) => {
+      a = eval(songs.value)
+      console.log(songs.value, a)
+      totransposed = {
+        name: songs.value,
+        notes: totranspose
+      }
+      let cccc = JSON.stringify(totransposed)
+      localStorage.setItem("totranslatenote", cccc);
+      location.href = "transpose4.html"
+    });
   </script>
+
+  <script>
+    abcd = "c#d#f#"
+    console.log(splitnotes(abcd));
+
+    function splitnotes(abcd) {
+      defg = [];
+      bcde = abcd.split("")
+      bcde.forEach((cdef, index) => {
+        if (cdef.includes("#")) {
+          // console.log(index)
+          defg.push(index)
+
+        }
+      })
+
+      for (j = 0; j < bcde.length; j++) {
+        for (i = 0; i < defg.length; i++) {
+          if (j == defg[i]) {
+            bcde[j - 1] = bcde[j - 1] + bcde[defg[i]]
+          }
+        }
+      }
+
+      w = 0;
+      for (i = 0; i < defg.length; i++) {
+        // console.log(defg[i], w, bcde)
+        bcde.splice(defg[i] - w, 1)
+        // console.log(defg[i], w, bcde)
+        w++;
+      }
+      return bcde.join().split(",");
+      // return bcde.join().split(", ,");
+    }
+  </script>
+
   <script>
     const Ckey = ["c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "b", "-"];
     const Nepnotes = ["सा", "रेे।", "रे", "ग|", "ग", "म", "म।", "प", "ध।", "ध", "नि।", "नि", "-"];
@@ -103,6 +313,7 @@
     const Bkey = ["b", "c", "c#", "d", "d#", "e", "f", "f#", "g", "g#", "a", "a#", "-"];
 
     songs = document.querySelector("#songs");
+    songstwoli = document.querySelectorAll("#songstwo li");
     songkey = document.querySelector("#songkey");
     translate = document.querySelector("#translate");
     // Ckey.map(key => console.log(`${key} is the natural key`))
@@ -111,6 +322,13 @@
       // translates(eval(songs.value))
       translates(totranspose)
     });
+    songstwoli.forEach(songl => {
+      songl.addEventListener("click", (e) => {
+        songlid = songl.id
+        songlid.replace("note.", "")
+        transpose(eval(songlid), eval(songkey.value + "key"))
+      });
+    })
     songs.addEventListener("change", () => {
       transpose(eval(songs.value), eval(songkey.value + "key"))
     });
@@ -124,12 +342,16 @@
       // to nepali
       let newscale = [];
       for (i = 0; i < note.length; i++) {
-        if ((note[i].length == 2 || note[i].length == 3 || note[i].length == 4) && !note[i].includes("#")) {
+        if ((note[i].length == 2 || note[i].length == 3 || note[i].length == 4)) {
           notej = [];
-          notei = note[i].split("")
+          if (note[i].includes("#") && note[i].length >= 4) {
+            notei = splitnotes(note[i])
+          } else {
+            notei = note[i].split("")
+          }
           console.log(notei, note[i])
-          for (z = 0; z < notei.length; z++) {
-            for (x = 0; x < Ckey.length; x++) {
+          for (let z = 0; z < notei.length; z++) {
+            for (let x = 0; x < Ckey.length; x++) {
               if (notei[z] == Ckey[x]) {
                 console.log(Ckey[x], notei[z], Nepnotes[x])
                 notej.push(Nepnotes[x])
@@ -144,7 +366,24 @@
           const result = notej.join().replace(searchRegExp, replaceWith);
           newscale.push(result);
         }
+        /*
+                if ((note[i].length == 2 || note[i].length == 3 || note[i].length == 4) && note[i].includes("#")) {
+                  notej = [];
+                  let splitednotes = splitnotes(note[i]);
 
+
+                  for (let z = 0; z < splitednotes.length; z++) {
+                    for (let x = 0; x < Ckey.length; x++) {
+                      debugger
+                      if (splitednotes[z] == Ckey[x]) {
+                        console.log(Ckey[x], splitednotes[z], Nepnotes[x])
+                        notej.push(Nepnotes[x])
+                      }
+                    }
+                  }
+                  console.log(notej)
+                }
+         */
         for (j = 0; j < Nepnotes.length; j++) {
           if (note[i] == Ckey[j]) {
             console.log(note[i], Nepnotes[j])
@@ -166,7 +405,7 @@
           // console.log(notei, note[i])
           for (z = 0; z < notei.length; z++) {
             for (x = 0; x < Ckey.length; x++) {
-              if (notei[z] == Ckey[x]) {
+              if (notei[z].toLowerCase() == Ckey[x]) {
                 // console.log(Ckey[x], notei[z], key[x])
                 notej.push(key[x])
               }
