a simple qr code maker

--- a/index.html
+++ b/index.html
@@ -46,12 +46,16 @@
   <a href="colorandinverse.html">colorandinverse</a>
   <a href="commentlist.html">commentlist</a>
   <a href="covidtracker.html">covidtracker</a>
+  <a href="qrcode.html">QR make</a>
   <a href="dynamicgradient.html">dynamicgradient</a>
+  <a href="allgradients.html">allgradients</a>
   <a href="guessnumber.html">guessnumber</a>
   <a href="gyrooo.html">gyrooo.html</a>
   <a href="moviesearch.html">moviesearch</a>
   <a href="weatherapi.html">weather</a>
   <a href="headntail.html">headntail</a>
+  <a href="pinlogin.html">pinlogin</a>
+  <a href="slicedtext.html">slicedtext</a>
   <a href="keyboard.html">keyboard</a>
   <a href="mirrorword.html">mirrorword</a>
   <a href="stopwatch.html">stopwatch</a>
